<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp250"
        android:text="@string/LOST_INTERNET"
        android:textColor="@color/color_green"
        android:textSize="@dimen/sp18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp32"
        android:gravity="center"
        android:text="@string/no_internet_message"
        android:textSize="@dimen/sp16" />

    <Button
        android:id="@+id/btn_no_internet_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp32"
        android:background="@drawable/radius_5_green"
        android:text="@string/TRY_AGAIN"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp18" />

</LinearLayout>