<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_home_screen"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/color_green">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingRight="@dimen/dp16"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/txt_tb_main_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="Store"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_tb_main_employee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="Xin chào, employee!"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_home_screen_notification"
                    android:layout_width="@dimen/dp18"
                    android:layout_height="@dimen/dp18"
                    android:layout_gravity="end|center_vertical"
                    android:src="@mipmap/ic_alert"
                    android:tint="@color/color_white" />
            </FrameLayout>


        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_home_screen_transaction"
            android:layout_width="@dimen/dp250"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp32"
            android:background="@drawable/radius_5_green"
            android:text="@string/TRANSACTION"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_home_screen_history"
            android:layout_width="@dimen/dp250"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/radius_5_green"
            android:text="@string/HISTORY"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_home_screen_stock"
            android:layout_width="@dimen/dp250"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp32"
            android:background="@drawable/radius_5_green"
            android:text="@string/STOCK"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>